RESOLVED FIXED34946
REGRESSION: Selection painting issue in bug review textbox
https://bugs.webkit.org/show_bug.cgi?id=34946
Summary REGRESSION: Selection painting issue in bug review textbox
Simon Fraser (smfr)
Reported 2010-02-15 09:50:02 PST
Go into a bug review, like https://bugs.webkit.org/attachment.cgi?id=48732&action=review Place the caret in the middle of a line. Hit command-left arrow to move the caret to the left edge. Hit shift-down arrow a few times to select some lines Hit down arrow once to deselect and move to the next line. At this point you'll see a bogus selection rectangle left to the right of the previously selected lines. This didn't use to happen.
Attachments
Patch with repaint test (42.35 KB, patch)
2010-02-18 11:35 PST, mitz
simon.fraser: review+
mitz
Comment 1 2010-02-15 10:35:38 PST
I think the steps to reproduce are missing one crucial step: before pressing the down arrow key to clear the selection, scroll the text area vertically.
Alexey Proskuryakov
Comment 2 2010-02-15 14:02:39 PST
Regression->P1
Alexey Proskuryakov
Comment 3 2010-02-15 14:17:25 PST
mitz
Comment 4 2010-02-18 11:35:50 PST
Created attachment 49034 [details] Patch with repaint test
mitz
Comment 5 2010-02-18 12:56:15 PST
Note You need to log in before you can comment on or make changes to this bug.