<rdar://problem/7650652> REGRESSION: Selection painting issue in bug review textbox https://bugs.webkit.org/show_bug.cgi?id=34946

Reviewed by Simon Fraser.

WebCore:

Test: fast/repaint/selection-gap-overflow-scroll-2.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintSelection): localToContainerQuad() adjusts for
overflow scroll, but RenderLayer::addBlockSelectionGapsBounds() takes
non-scrolled coordinates, so account for that.

LayoutTests:

* fast/repaint/selection-gap-overflow-scroll-2.html: Copied from LayoutTests/fast/repaint/selection-gap-overflow-scroll.html.
* platform/mac/fast/repaint/selection-gap-overflow-scroll-2-expected.checksum: Added.
* platform/mac/fast/repaint/selection-gap-overflow-scroll-2-expected.png: Added.
* platform/mac/fast/repaint/selection-gap-overflow-scroll-2-expected.txt: Added.



Canonical link: https://commits.webkit.org/46289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54982 268f45cc-cd09-0410-ab3c-d52691b4dbfc