WebCore/rendering/RenderBlock.cpp
@@ -1971,6 +1971,7 @@ void RenderBlock::paintSelection(PaintInfo& paintInfo, int tx, int ty)
                 if (!hasLayer()) {
                     FloatRect localBounds(gapRectsBounds);
                     gapRectsBounds = localToContainerQuad(localBounds, layer->renderer()).enclosingBoundingBox();
+                    gapRectsBounds.move(layer->scrolledContentOffset());
                 }
                 layer->addBlockSelectionGapsBounds(gapRectsBounds);
             }
